<resources>
    <string name="app_name">CapstoneProject</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email_input">Email</string>
    <string name="sign_up_text">Sign up</string>
    <string name="name_input">Name</string>
    <string name="password_input">Password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_up_button">SIGN UP</string>
    <string name="login_text">Login</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="forgot_password_text">Forgot Password</string>
    <string name="enter_your_email">Please, enter your email address. You will receive a\n link to create a new password via email.</string>
    <string name="send">SEND</string>
    <string name="home">Home</string>
    <string name="shop">Shop</string>
    <string name="cart">Cart</string>
    <string name="favorites">Favorites</string>
    <string name="profile">Profile</string>
    <string name="product_image">Product Image</string>
    <string name="login">LOGIN</string>
    <string name="drawing_home">Drawing of people reading</string>
    <string name="books_to_read_this_summer_n_check_out_for_more">Books to read this summer.\n Check out for more!</string>
    <string name="home_swipe">Swipe left to see top 10 picks for the summer!</string>
</resources>