<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_home"
        android:menuCategory="secondary"
        android:title="@string/home" />
    <item
        android:id="@+id/shopFragment"
        android:icon="@drawable/ic_shop_books"
        android:menuCategory="secondary"
        android:title="@string/shop" />
    <item
        android:id="@+id/cartFragment"
        android:icon="@drawable/ic_cart"
        android:menuCategory="secondary"
        android:title="@string/cart" />
    <item
        android:id="@+id/favoritesFragment"
        android:icon="@drawable/ic_favorites"
        android:menuCategory="secondary"
        android:title="@string/favorites" />
    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/ic_profile"
        android:menuCategory="secondary"
        android:title="@string/profile" />
</menu>