<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.ForgotPasswordFragment"
    android:padding="20dp"
    android:background="#F5F5F5">

    <TextView
        android:id="@+id/textViewForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginTop="60dp"
        android:text="@string/forgot_password_text"
        style="@style/headerStyle"
        app:layout_constraintStart_toStartOf="@+id/textViewEnterEmail"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewEnterEmail"
        android:layout_width="343dp"
        android:layout_height="40dp"
        android:layout_marginTop="200dp"
        android:fontFamily="@font/sourcesanssro_semibold"
        android:text="@string/enter_your_email"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutForgotPassword"
        style="@style/textInputStyle"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/email_input"
        app:boxBackgroundColor="@color/white"
        app:hintTextColor="#9B9B9B"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewEnterEmail">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/forgotPasswordMail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            tools:ignore="TextContrastCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonResetPassword"
        android:layout_marginTop="60dp"
        android:text="@string/send"
        app:backgroundTint="@color/buttonColor"
        app:cornerRadius="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutForgotPassword"
        style="@style/buttonStyle" />
</androidx.constraintlayout.widget.ConstraintLayout>
</layout>